syntax="proto3";
package smvs;

option go_package = "github.com/AdamPayzant/COMP4109Project/src/protos/smvsclient";

service client {
    rpc recieveMessage(ListofMessages) returns (Status);

    rpc join(stream Message) returns (stream Message);
    rpc send(Message) returns (Message);

    //rpc ReKey(Token) returns (Status); // Requests client's host to change keys
    //rpc DeleteMessage(DeleteReq) returns (Status);

    //rpc GetConversation(Username) returns (Conversation);
}


message Message { //Information that will be passed between client and service
    string user = 1;
    string text = 2;
}

// As the name describes
message Empty {

}

// A generic status response message
message Status {
    int32 status = 1;
}

// Because the way protobuffers (don't) do lists, this is the best way to do this
message ListofMessages {
    repeated string messages = 1;
}

message Text {
    string targetUser = 1;
    ListofMessages message = 2;
}
